Side-by-side margins and alignment fixes

--- a/css/core/_content-images.scss
+++ b/css/core/_content-images.scss
@@ -99,6 +99,14 @@
 	&.side-by-side {
 		@include screen(tablet) {
 			display: inline-block;
+			vertical-align: top;
+			margin: 0.5rem;
+		}
+		&.w33 {
+			width: calc(33.33333333% - 1rem);
+		}
+		&.w50 {
+			width: calc(50% - 1rem);
 		}
 	}
     
